大幅优化性能